; ModuleID = '/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi.c_zend_ffi_ctype_compare_objects.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi.c_zend_ffi_ctype_compare_objects.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@IS_OBJECT = common dso_local global i64 0, align 8
@zend_ffi_ctype_ce = common dso_local global i64 0, align 8
@zend_ffi_exception_ce = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"Comparison of incompatible C types\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @zend_ffi_ctype_compare_objects to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zend_ffi_ctype_compare_objects(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_2__*, align 8
  %7 = alloca %struct.TYPE_2__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i64 @Z_TYPE_P(i32* %10)
  %12 = load i64, i64* @IS_OBJECT, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %50

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = call i64 @Z_OBJCE_P(i32* %15)
  %17 = load i64, i64* @zend_ffi_ctype_ce, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %50

19:                                               ; preds = %14
  %20 = load i32*, i32** %5, align 8
  %21 = call i64 @Z_TYPE_P(i32* %20)
  %22 = load i64, i64* @IS_OBJECT, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %50

24:                                               ; preds = %19
  %25 = load i32*, i32** %5, align 8
  %26 = call i64 @Z_OBJCE_P(i32* %25)
  %27 = load i64, i64* @zend_ffi_ctype_ce, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %50

29:                                               ; preds = %24
  %30 = load i32*, i32** %4, align 8
  %31 = call i64 @Z_OBJ_P(i32* %30)
  %32 = inttoptr i64 %31 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %32, %struct.TYPE_2__** %6, align 8
  %33 = load i32*, i32** %5, align 8
  %34 = call i64 @Z_OBJ_P(i32* %33)
  %35 = inttoptr i64 %34 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %35, %struct.TYPE_2__** %7, align 8
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32* @ZEND_FFI_TYPE(i32 %38)
  store i32* %39, i32** %8, align 8
  %40 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = call i32* @ZEND_FFI_TYPE(i32 %42)
  store i32* %43, i32** %9, align 8
  %44 = load i32*, i32** %8, align 8
  %45 = load i32*, i32** %9, align 8
  %46 = call i64 @zend_ffi_is_same_type(i32* %44, i32* %45)
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %49

48:                                               ; preds = %29
  store i32 0, i32* %3, align 4
  br label %53

49:                                               ; preds = %29
  store i32 1, i32* %3, align 4
  br label %53

50:                                               ; preds = %24, %19, %14, %2
  %51 = load i32, i32* @zend_ffi_exception_ce, align 4
  %52 = call i32 @zend_throw_error(i32 %51, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %53

53:                                               ; preds = %50, %49, %48
  %54 = load i32, i32* %3, align 4
  ret i32 %54
}

declare dso_local i64 @Z_TYPE_P(i32*) #1

declare dso_local i64 @Z_OBJCE_P(i32*) #1

declare dso_local i64 @Z_OBJ_P(i32*) #1

declare dso_local i32* @ZEND_FFI_TYPE(i32) #1

declare dso_local i64 @zend_ffi_is_same_type(i32*, i32*) #1

declare dso_local i32 @zend_throw_error(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
